--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,4 +2,6 @@
 <html
         data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title">Inicio</span>
-<main data-layout-fragment="content">Bienvenido al gestor de áreas naturales</main>
+<main data-layout-fragment="content">
+    <img class="img-fluid" src="" data-th-src="@{/img/index.jpg}">
+</main>
