--- a/src/main/resources/templates/area/update.html
+++ b/src/main/resources/templates/area/update.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <th><label for="location">Coordenadas</label></th>
-                <td><input required="required" type="text" placeholder="-24.844638, 18.783207" pattern="-?(90|[1-8]?[0-9])\.[0-9]+, -?(180|1?[1-9]?[0-9])\.[0-9]+" id="location" data-th-field="*{location}"></td>
+                <td><input required="required" type="text" placeholder="-24.844638, 18.783207" pattern="-?(90|[1-8]?[0-9])\.[0-9]+, -?(180|1[0-9][0-9]|[1-9]?[0-9])\.[0-9]+" id="location" data-th-field="*{location}"></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('location')}">
                 <td colspan="2">
