--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -74,6 +74,7 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Reservar" class="btn btn-success"/>
+        <a data-th-href="@{/area-period/list/{id}(id=${data.area.id})}" class="btn btn-info"
+           role="button">Atras</a><input type="submit" value="Reservar" class="btn btn-success"/>
     </form>
 </main>
