--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -75,6 +75,6 @@
             </tr>
         </table>
         <a data-th-href="@{/area-period/list/{id}(id=${data.area.id})}" class="btn btn-info"
-           role="button">Atras</a><input type="submit" value="Reservar" class="btn btn-success"/>
+           role="button">Cancelar</a><input type="submit" value="Reservar" class="btn btn-success"/>
     </form>
 </main>
