--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -7,8 +7,11 @@
         <tr>
             <th>Nombre</th>
             <th data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">Validez</th>
-            <th class="text-center" data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</th>
-            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) or session.user instanceof T(app.model.EnviromentalManager)}">
+            <th class="text-center"
+                data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información
+            </th>
+            <th class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) or session.user instanceof T(app.model.EnviromentalManager)}">
                 <a data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}" href="add"
                    class="btn btn-success" role="button">Añadir</a>
             </th>
@@ -16,11 +19,13 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td class="text-center" colspan="3" data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">No hay ningun
+            <td class="text-center" colspan="3"
+                data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">No hay ningun
                 municipio
                 registrado
             </td>
-            <td class="text-center" colspan="2" data-th-unless="${session.user instanceof T(app.model.EnviromentalManager)}">No hay ningun
+            <td class="text-center" colspan="2"
+                data-th-unless="${session.user instanceof T(app.model.EnviromentalManager)}">No hay ningun
                 municipio registrado
             </td>
         </tr>
@@ -30,9 +35,10 @@
                 data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}"></td>
             <td class="text-center" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">
                 <a
-                   data-th-href="@{/area/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Áreas</a>
+                        data-th-href="@{/area/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Áreas</a>
             </td>
-            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) or session.user instanceof T(app.model.EnviromentalManager)}">
+            <td class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) or session.user instanceof T(app.model.EnviromentalManager)}">
                 <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == object.id and object.active}"
                    data-th-href="@{/municipality/update}" class="btn btn-warning" role="button">Actualizar
                 </a>
