--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -13,24 +13,34 @@
             <th>Localización</th>
             <th>Ocupación</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Mapa</th>
-            <th class="text-center"><a data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}" data-th-href="@{/municipality/list}" class="btn btn-info"
-                                       role="button">Atras</a><span data-th-unless="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</span></th>
-            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
+            <th class="text-center"><a
+                    data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"
+                    data-th-href="@{/municipality/list}" class="btn btn-info"
+                    role="button">Atras</a><span
+                    data-th-unless="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</span>
+            </th>
+            <th class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
                 <a
-                   data-th-href="@{/area/add}" class="btn btn-success"
-                   role="button">Añadir</a>
+                        data-th-href="@{/area/add}" class="btn btn-success"
+                        role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td class="text-center" colspan="8" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">No hay ninguna área
+            <td class="text-center" colspan="8"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
+                No hay ninguna área
                 registrada
             </td>
-            <td class="text-center" colspan="7" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">No hay ninguna área
+            <td class="text-center" colspan="7"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">
+                No hay ninguna área
                 registrada
             </td>
-            <td class="text-center" colspan="6" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna
+            <td class="text-center" colspan="6"
+                data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna
                 área
                 registrada
             </td>
@@ -43,21 +53,27 @@
             <td data-th-text="*{object.description}"></td>
             <td data-th-text="*{object.location}"></td>
             <td data-th-text="${data[objectStat.index].occupied}"></td>
-            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a class="btn btn-info" data-th-href="*{object.image}" target="_blank">Abrir</a></td>
+            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a class="btn btn-info"
+                                                                                         data-th-href="*{object.image}"
+                                                                                         target="_blank">Abrir</a></td>
             <td class="text-center">
-                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Horarios</a>
+                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-info"
+                   role="button">Horarios</a>
                 <a data-th-if="${(session.user == null) or (session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id)}"
-                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Servicios</a>
+                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-info"
+                   role="button">Servicios</a>
                 <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id}"
                    data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Zonas</a>
             </td>
-            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}">
+            <td class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}">
                 <a data-th-if="*{object.active}"
-                        data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                   data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a data-th-if="*{object.active}"
-                        data-th-href="@{/area/delete/{id}(id=${object.id})}"
-                   onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Dar de baja
+                   data-th-href="@{/area/delete/{id}(id=${object.id})}"
+                   onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Dar
+                    de baja
                 </a>
             </td>
         </tr>
