--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -9,19 +9,30 @@
         <tr>
             <th>Fechas</th>
             <th>Horario</th>
-            <th class="text-center"><a data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}" data-th-href="@{/area/list/{id}(id=${data[0].municipality.id})}" class="btn btn-info"
-                                       role="button">Atras</a><span data-th-unless="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</span></th>
-            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">
+            <th class="text-center"><a
+                    data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"
+                    data-th-href="@{/area/list/{id}(id=${data[0].municipality.id})}" class="btn btn-info"
+                    role="button">Atras</a><span
+                    data-th-unless="${session.user == null or session.user instanceof T(app.model.Citizen)}">Información</span>
+            </th>
+            <th class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">
                 <a
-                   data-th-href="@{/area-period/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
-                   role="button">Añadir</a>
+                        data-th-href="@{/area-period/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
+                        role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td class="text-center" colspan="3" data-th-unless="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">No hay ningun horario registrado</td>
-            <td class="text-center" colspan="4" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">No hay ningun horario registrado</td>
+            <td class="text-center" colspan="3"
+                data-th-unless="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">
+                No hay ningun horario registrado
+            </td>
+            <td class="text-center" colspan="4"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">
+                No hay ningun horario registrado
+            </td>
         </tr>
         <tr data-th-each="object: ${object}">
             <td data-th-text="*{object.toScheduleString}"></td>
@@ -37,9 +48,10 @@
                    data-th-href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Personal
                 </a>
             </td>
-            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
+            <td class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
                 <a data-th-if="*{object.ended}"
-                        data-th-href="@{/area-period/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
+                   data-th-href="@{/area-period/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
                 <a data-th-if="*{object.ended}"
                    data-th-href="@{/area-period/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el horario?')" class="btn btn-danger"
