--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title" data-th-text="'Añadir personal a ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
+<span data-layout-fragment="title"
+      data-th-text="'Añadir personal a ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que quiere darle de alta y los datos son correctos?')"
