--- a/src/main/resources/templates/controlStaff/update.html
+++ b/src/main/resources/templates/controlStaff/update.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title" data-th-text="'Actualizar personal de ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
+<span data-layout-fragment="title"
+      data-th-text="'Actualizar personal de ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que quiere actualizar los datos y los datos son correctos?')"
           data-th-object="${object}" method="post">
