--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -10,26 +10,35 @@
             <th>Tipo</th>
             <th>Fechas</th>
             <th>Horario</th>
-            <th data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"><a data-th-href=" @{/area/list/{id}(id=${data[0].municipality.id})}" class="btn btn-info"
+            <th data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"><a
+                    data-th-href=" @{/area/list/{id}(id=${data[0].municipality.id})}" class="btn btn-info"
                     role="button">Atras</a></th>
-            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
+            <th class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
                 <a
-                   data-th-href="@{/service/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
-                   role="button">Añadir</a>
+                        data-th-href="@{/service/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
+                        role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td class="text-center" colspan="4" data-th-if="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">No hay ningún servicio registrado</td>
-            <td class="text-center" colspan="3" data-th-unless="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">No hay ningún servicio registrado</td>
+            <td class="text-center" colspan="4"
+                data-th-if="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">
+                No hay ningún servicio registrado
+            </td>
+            <td class="text-center" colspan="3"
+                data-th-unless="${(session.user == null or session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active)}">
+                No hay ningún servicio registrado
+            </td>
         </tr>
         <tr data-th-each="object: ${object}">
             <td data-th-text="*{data[objectStat.index].serviceType.name}"></td>
             <td data-th-text="*{object.toScheduleString}"></td>
             <td data-th-text="*{object.toPeriodString}"></td>
             <td data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}"></td>
-            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
+            <td class="text-center"
+                data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
                 <a data-th-if="*{object.ended}"
                    data-th-href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
