--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,7 +6,7 @@
     <form data-th-object="${object}" method="post">
         <table>
             <tr>
-                <th><label for="identification">Identificación:</label></th>
+                <th><label for="identification">Identificación (NIF)</label></th>
                 <td><input required="required" type="text" id="identification" data-th-field="*{identification}"/></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('identification')}">
@@ -15,7 +15,7 @@
                 </td>
             </tr>
             <tr>
-                <th><label for="password">Contraseña:</label></th>
+                <th><label for="password">Contraseña</label></th>
                 <td><input required="required" type="password" id="password" data-th-field="*{password}"/></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('password')}">
