--- a/src/main/resources/templates/citizen/list.html
+++ b/src/main/resources/templates/citizen/list.html
@@ -6,7 +6,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Identificación</th>
+            <th>Identificación (NIF)</th>
             <th>Nombre</th>
             <th>Correo electrónico</th>
             <th>País</th>
