--- a/src/main/resources/templates/controlStaff/list.html
+++ b/src/main/resources/templates/controlStaff/list.html
@@ -10,7 +10,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Identificación</th>
+            <th>Identificación (NIF)</th>
             <th>Nombre</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Validez</th>
             <th>Correo electrónico</th>
