--- a/src/main/resources/templates/municipalManager/list.html
+++ b/src/main/resources/templates/municipalManager/list.html
@@ -9,7 +9,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Identificación</th>
+            <th>Identificación (NIF)</th>
             <th>Nombre</th>
             <th data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">Validez</th>
             <th>Correo electrónico</th>
