--- a/src/main/resources/templates/reservation/view.html
+++ b/src/main/resources/templates/reservation/view.html
@@ -28,5 +28,8 @@
                 <td data-th-text="*{occupied}"></td>
             </tr>
         </table>
+        <a
+                data-th-href="@{/reservation/list}" class="btn btn-info"
+                role="button">Gestionar reservas</a>
     </form>
 </main>
