--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -2,6 +2,7 @@
 <html data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title">Municipios</span>
 <main data-layout-fragment="content">
+    <p data-th-if="${session.user == null or session.user instanceof T(app.model.Citizen)}" class="text-muted">Si desea ver la información sobre las áreas o realizar una reserva, clique en el botón "Áreas" del municipio deseado.</p>
     <table class="table table-striped">
         <thead>
         <tr>
