--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html
+        class="reservation-form"
         data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title"
       data-th-text="'Añadir reserva para ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
